--- a/kapitel4/ch4.tex
+++ b/kapitel4/ch4.tex
@@ -12,6 +12,7 @@ Zu der Android App gibt es parallel eine App für den Desktop. Diese wurde mit J
 				backgroundcolor=\color{light-gray},
 				%frame=single,
 				tabsize=2,
+				breaklines=true,
 				%numbers=left,
 				numbersep=5pt,
 				%numberstyle=\color{light-gray},
